syntax = "proto3";

option csharp_namespace = "DiscountGrpc";

package discount;

// The discount service definition.
service DiscountProtoService {
  // CRUD Operations
  rpc GetDiscount (GetDiscountRequest) returns (CouponModel);
  rpc CreateDiscount (InsertCouponRequest) returns (CouponModel);
  rpc UpdateDiscount (InsertCouponRequest) returns (CouponModel);
  rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest {
  string productName = 1;
}

message CouponModel {
  // TODO: request models should not have the ID
  int32 Id = 1;
  string productName = 2;
  string description = 3;
  int32 amount = 4;
}

message InsertCouponRequest {
  CouponModel coupon = 1;
}

message DeleteDiscountRequest {
  string productName = 1;
}

message DeleteDiscountResponse {
  bool isSuccess = 1;
}
